Bug fixes style.css
Text overflows when page redirects or refreshes is fixed..

--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ html {
     background: radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);
 }
 
+div {
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+}
+
 #title {
     position: absolute;
     top: 50%;
